@@ -1694,7 +1694,7 @@ ACCMSGS=OFF
 #    FATAREAS, LOGINS, THREADTHREAD, JOURNALTHREAD, MAPTHREAD, MSSP,
 #    PLAYERTHREAD, SESSIONTHREAD, STATSTHREAD, CATALOGTHREAD, SMTPCLIENT
 #    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT,
-#    RESPAWNTHREAD, ELECTRICTHREAD, MSDP, GMCP
+#    RESPAWNTHREAD, ELECTRICTHREAD, MSDP, GMCP, ALL_AGEING
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
